--- a/style.css
+++ b/style.css
@@ -52,8 +52,11 @@ header {
   text-decoration: none;
   color: #1f2b50;
   padding: 15px;
+  transition: 0.5s;
 }
-
+header a:hover {
+  color: gainsboro;
+}
 .hero-section {
   display: flex;
   justify-content: space-between;
@@ -74,6 +77,19 @@ header {
 
 .right-section {
   text-align: center;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+h2 > span {
+  position: relative;
+  display: inline-block;
+  color: red;
+  vertical-align: bottom;
+  overflow: hidden;
+  height: 1.25em;
+}
+h2 > span > span {
+  display: block;
+  animation: anim 5s infinite ease;
 }
 .right-section h1 {
   font-size: 65px;
@@ -90,9 +106,9 @@ header {
 }
 #resume-file:hover {
   scale: 1.1;
-  box-shadow: 2px 4px 33px 4px rgba(0, 0, 0, 0.53);
-  -webkit-box-shadow: 2px 4px 33px 4px rgba(0, 0, 0, 0.53);
-  -moz-box-shadow: 2px 4px 33px 4px rgba(0, 0, 0, 0.53);
+  box-shadow: 2px 4px 33px 4px rgba(255, 255, 255, 0.53);
+  -webkit-box-shadow: 2px 4px 33px 4px rgba(255, 255, 255, 0.53);
+  -moz-box-shadow: 2px 4px 33px 4px rgba(255, 255, 255, 0.53);
 }
 #resume-file img {
   position: absolute;
@@ -105,8 +121,41 @@ header {
   animation: profile 3s infinite;
 }
 .about-me-section {
-  background-color: lightblue;
+  margin-top: 5%;
+  position: relative;
+  display: flex;
+  justify-content: center;
 }
+.about-me-box h3 {
+  position: absolute;
+  top: -10px;
+}
+.inner-box {
+  --r: 20px; /* the radius */
+  --s: 30px; /* size of inner curve */
+  --x: 40px; /* horizontal offset (no percentage) */
+  --y: -10px; /* vertical offset (no percentage) */
+  width: 600px;
+  aspect-ratio: 1;
+  background: #3fb8af;
+  border-radius: var(--r);
+  --_m: /calc(2 * var(--r)) calc(2 * var(--r)) radial-gradient(#000 70%, #0000
+        72%);
+  --_g: conic-gradient(at calc(100% - var(--r)) var(--r), #0000 25%, #000 0);
+  --_d: (var(--s) + var(--r));
+  mask: calc(100% - var(--_d) - var(--x)) 0 var(--_m),
+    100% calc(var(--_d) + var(--y)) var(--_m),
+    radial-gradient(var(--s) at 100% 0, #0000 99%, #000 calc(100% + 1px))
+      calc(-1 * var(--r) - var(--x)) calc(var(--r) + var(--y)),
+    var(--_g) calc(-1 * var(--_d) - var(--x)) 0,
+    var(--_g) 0 calc(var(--_d) + var(--y));
+  mask-repeat: no-repeat;
+  height: 150px;
+  background-color: gray;
+  text-indent: 85px;
+  padding: 10px;
+}
+
 @media (max-width: 665px) {
   .hero-section {
     flex-direction: column;
@@ -114,7 +163,7 @@ header {
   }
   .right-section h1 {
     font-size: 40px;
-    margin-top: 50px;
+    margin-top: -40px;
   }
   .profile {
     width: 250px;
@@ -126,11 +175,26 @@ header {
   #resume-file {
     margin-bottom: 10px;
   }
+  .about-me-section {
+    margin-top: 5%;
+  }
+  .inner-box {
+    width: 430px;
+    font-size: 13px;
+  }
 }
 @media (max-width: 444px) {
   .header {
     display: flex;
     justify-content: center;
+  }
+  .header ul {
+    padding: 0;
+    margin-top: 0;
+  }
+  .inner-box {
+    width: 300px;
+    font-size: 12px;
   }
 }
 @media (max-width: 320px) {
@@ -143,9 +207,17 @@ header {
   }
   .right-section h1 {
     font-size: 30px;
+    margin-top: -50px;
   }
   .scroll {
-    right: 33%;
+    right: 44%;
+  }
+  .about-me-section {
+    margin-top: 10%;
+  }
+  .inner-box {
+    width: 250px;
+    font-size: 11px;
   }
 }
 
@@ -165,5 +237,59 @@ header {
   }
   100% {
     transform: translate(0, 10px);
+  }
+}
+@keyframes top {
+  0% {
+    transform: translate(0, 10px);
+  }
+  25% {
+    transform: translate(0, -5px);
+  }
+  40% {
+    transform: translate(0, 10px);
+  }
+  75% {
+    transform: translate(0, -5px);
+  }
+  100% {
+    transform: translate(0, 10px);
+  }
+}
+#top-btn {
+  bottom: 20px;
+  right: 20px;
+  position: fixed;
+  rotate: 180deg;
+  background-color: gray;
+  border: none;
+  padding: 10px;
+  border-radius: 60px;
+  animation: top 2.5s infinite;
+  transition: 0.2s;
+}
+#top-btn:hover {
+  scale: 1.1;
+  box-shadow: 2px 4px 33px 4px rgba(255, 255, 255, 0.53);
+  -webkit-box-shadow: 2px 4px 33px 4px rgba(255, 255, 255, 0.53);
+  -moz-box-shadow: 2px 4px 33px 4px rgba(255, 255, 255, 0.53);
+  animation: none;
+}
+
+@keyframes anim {
+  0% {
+    transform: translateY(0%);
+  }
+  25% {
+    transform: translateY(-100%);
+  }
+  50% {
+    transform: translateY(-200%);
+  }
+  75% {
+    transform: translateY(-300%);
+  }
+  100% {
+    transform: translateY(-400%);
   }
 }
