--- a/style.css
+++ b/style.css
@@ -159,13 +159,18 @@ h2 > span > span {
 
 .portofilo {
   background-color: lightblue;
+  height: 800px;
 }
 .html {
-  background-color: rgba(255, 255, 255, 0);
+  background-color: rgba(128, 128, 128, 0.297);
   backdrop-filter: blur(10px);
   width: 100px;
-  height: 100px;
+  /* height: 100px; */
   border-radius: 10px;
+  padding-right: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 @media (max-width: 665px) {
   .hero-section {
@@ -278,6 +283,7 @@ h2 > span > span {
   border-radius: 60px;
   animation: top 2.5s infinite;
   transition: 0.2s;
+  z-index: 10000;
 }
 #top-btn:hover {
   scale: 1.1;
