--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ h2 > span > span {
   flex-direction: column;
   justify-content: center;
 }
-@media (max-width: 665px) {
+@media (max-width: 689px) {
   .hero-section {
     flex-direction: column;
     align-items: center;
@@ -185,6 +185,7 @@ h2 > span > span {
   .right-section h1 {
     font-size: 40px;
     margin-top: -40px;
+    white-space: nowrap;
   }
   .profile {
     width: 250px;
@@ -221,6 +222,11 @@ h2 > span > span {
     margin-top: -40px;
   }
 }
+@media (max-width: 394px) {
+  .right-section h1 {
+    margin-top: 0;
+  }
+}
 @media (max-width: 320px) {
   .header ul {
     display: none;
@@ -241,7 +247,8 @@ h2 > span > span {
   }
   .inner-box {
     width: 250px;
-    font-size: 11px;
+    height: 250px;
+    font-size: 15px;
   }
 }
 
