--- a/style.css
+++ b/style.css
@@ -163,8 +163,28 @@ h2 > span > span {
 }
 
 .portofilo {
-  background-color: lightblue;
   height: 800px;
+  position: relative;
+  margin: 0 -8px;
+  padding-right: 2px;
+}
+.container {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: start;
+  margin-right: 20px;
+  margin-left: 20px;
+  animation: html 2s forwards;
+}
+.background-video-P {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  z-index: -1;
 }
 .html {
   background-color: rgba(128, 128, 128, 0.297);
@@ -172,11 +192,14 @@ h2 > span > span {
   width: 100px;
   /* height: 100px; */
   border-radius: 10px;
-  padding-right: 10px;
+  padding: 5px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
+
 @media (max-width: 689px) {
   .hero-section {
     flex-direction: column;
